[package]
name = "otree"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
ratatui = "0.26.2"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["preserve_order"] }
serde_yaml = "0.9.34"
toml = { version = "0.8.12", features = ["preserve_order"] }
tui-tree-widget = "0.19.0"
